# tangle

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
examples/: demo.sh
include/tangle/: graph.hpp  types.hpp
include/tangle/algo/: centrality.hpp  community.hpp
include/tangle/annotate/: annotation_db.hpp  go_enrichment.hpp
include/tangle/export/: sbml_exporter.hpp
include/tangle/io/: biogrid_importer.hpp  edgelist_io.hpp  string_importer.hpp
packaging/homebrew/: tangle.rb
src/: graph.cpp  main.cpp  tui.cpp
src/algo/: centrality.cpp  community.cpp
src/annotate/: annotation_db.cpp  go_enrichment.cpp
src/export/: sbml_exporter.cpp
src/io/: biogrid_importer.cpp  edgelist_io.cpp  string_importer.cpp
test_data/: output.sbml  test_00.tsv  test_01.txt  test_case.tsv
tests/: catch_main.cpp  dummy_goa.gaf  dummy_string.txt  tui_workflow_test.cpp
